foundation-objs/main/default/objects/Opportunity/fields/Customer_IT_approval_status__c.field-meta.xml
<CustomField>
    <fullName>Customer_IT_approval_status__c</fullName>
    <label>Customer IT approval status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending - Meeting completed</fullName>
            </value>
            <value>
                <fullName>Pending - Meeting pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>