foundation-objs/main/default/objects/Opportunity/fields/Data_Loader_Bool__c.field-meta.xml
<CustomField>
    <fullName>Data_Loader_Bool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Loader Bool</label>
    <type>Checkbox</type>
</CustomField>