foundation-objs/main/default/objects/Opportunity/fields/Deal_desk_ID__c.field-meta.xml
<CustomField>
    <fullName>Deal_desk_ID__c</fullName>
    <label>Deal desk ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>