foundation-objs/main/default/objects/Opportunity/fields/Deal_Push_Comments__c.field-meta.xml
<CustomField>
    <fullName>Deal_Push_Comments__c</fullName>
    <label>Deal Push Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>