foundation-objs/main/default/objects/Opportunity/fields/Deal_Push_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Deal_Push_Reasons__c</fullName>
    <label>Deal Push Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&quot;- Challenge to winning bid by competitor</fullName>
            </value>
            <value>
                <fullName>Change in POC/pilot Scope</fullName>
            </value>
            <value>
                <fullName>Customer budget restrictions</fullName>
            </value>
            <value>
                <fullName>Delays with purchasing department</fullName>
            </value>
            <value>
                <fullName>Issues with order execution</fullName>
            </value>
            <value>
                <fullName>Issues with product quality (existing products) Legal / Contract negotiations</fullName>
            </value>
            <value>
                <fullName>Technical complications during POC/Pilot</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>