foundation-objs/main/default/objects/Opportunity/fields/Deal_Years__c.field-meta.xml
<CustomField>
    <fullName>Deal_Years__c</fullName>
    <label>Deal Years</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>