foundation-objs/main/default/objects/Opportunity/fields/Demo_Requested__c.field-meta.xml
<CustomField>
    <fullName>Demo_Requested__c</fullName>
    <label>MQL Demo Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>