foundation-objs/main/default/objects/Opportunity/fields/Demo_Rescheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Rescheduled_Date__c</fullName>
    <label>Demo Rescheduled Date</label>
    <type>DateTime</type>
</CustomField>