foundation-objs/main/default/objects/Opportunity/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>