foundation-objs/main/default/objects/Opportunity/fields/Details_for_current_process_of_client__c.field-meta.xml
<CustomField>
    <fullName>Details_for_current_process_of_client__c</fullName>
    <defaultValue>&quot;NA&quot;</defaultValue>
    <label>Details for current process of client</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>