foundation-objs/main/default/objects/Opportunity/fields/Discovery_Agreement_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Agreement_Yes_No__c</fullName>
    <label>Discovery Agreement - Yes / No</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>