foundation-objs/main/default/objects/Opportunity/fields/Document_No_LOE_No__c.field-meta.xml
<CustomField>
    <fullName>Document_No_LOE_No__c</fullName>
    <label>Document No./LOE No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>