foundation-objs/main/default/objects/Opportunity/fields/Domain_Name_Proper__c.field-meta.xml
<CustomField>
    <fullName>Domain_Name_Proper__c</fullName>
    <formula>If( CONTAINS(Company_Domain_Name__c,&apos;@&apos;),TRIM(RIGHT(  Company_Domain_Name__c, LEN(Company_Domain_Name__c)-FIND(&quot;@&quot;,  Company_Domain_Name__c))),Company_Domain_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain Name Proper</label>
    <type>Text</type>
</CustomField>