foundation-objs/main/default/objects/Opportunity/fields/e_Invoice_Integration_Opp_for_Upsell__c.field-meta.xml
<CustomField>
    <fullName>e_Invoice_Integration_Opp_for_Upsell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>e-Invoice Integration Opp for Upsell</label>
    <type>Checkbox</type>
</CustomField>