foundation-objs/main/default/objects/Opportunity/fields/E_Sign_Customer_Info__c.field-meta.xml
<CustomField>
    <fullName>E_Sign_Customer_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>E-Sign Customer Info</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Mark Esign customer contact as communicable by navigating to the contact</errorMessage>
        <filterItems>
            <field>Contact.Email</field>
            <operation>notContain</operation>
            <value>cleartax.in</value>
        </filterItems>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Is_Communicable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes_llq</relationshipName>
    <type>Lookup</type>
</CustomField>