foundation-objs/main/default/objects/Opportunity/fields/ERP__c.field-meta.xml
<CustomField>
    <fullName>ERP__c</fullName>
    <label>ERP</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ERP</valueSetName>
    </valueSet>
</CustomField>