foundation-objs/main/default/objects/Opportunity/fields/ERP_migration_planned_in_next_6_months__c.field-meta.xml
<CustomField>
    <fullName>ERP_migration_planned_in_next_6_months__c</fullName>
    <label>ERP migration planned in next 6 months?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>