foundation-objs/main/default/objects/Opportunity/fields/ESign_BE_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>ESign_BE_Document_ID__c</fullName>
    <label>ESign BE Document ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>