foundation-objs/main/default/objects/Opportunity/fields/ESign_Category__c.field-meta.xml
<CustomField>
    <fullName>ESign_Category__c</fullName>
    <label>ESign Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-Sign</fullName>
                <default>true</default>
                <label>E-Sign</label>
            </value>
            <value>
                <fullName>Physical Sign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>