foundation-objs/main/default/objects/Opportunity/fields/ESign_Completed1__c.field-meta.xml
<CustomField>
    <fullName>ESign_Completed1__c</fullName>
    <formula>IF(ISPICKVAL(E_Sign_Status__c , &apos;E-Sign Successful&apos;) , 1, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ESign Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>