foundation-objs/main/default/objects/Opportunity/fields/ESign_Message__c.field-meta.xml
<CustomField>
    <fullName>ESign_Message__c</fullName>
    <label>ESign Message</label>
    <type>TextArea</type>
</CustomField>