foundation-objs/main/default/objects/Opportunity/fields/ESign_Sign_Status__c.field-meta.xml
<CustomField>
    <fullName>ESign_Sign_Status__c</fullName>
    <label>ESign Client Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>