foundation-objs/main/default/objects/Opportunity/fields/Estimated_budget__c.field-meta.xml
<CustomField>
    <fullName>Estimated_budget__c</fullName>
    <label>Estimated budget allotted by Customer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>