foundation-objs/main/default/objects/Opportunity/fields/Estimated_Monthly_throughput__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Monthly_throughput__c</fullName>
    <label>Estimated Monthly throughput</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>