foundation-objs/main/default/objects/Opportunity/fields/Estimated_Number_Of_GSTN__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Number_Of_GSTN__c</fullName>
    <label>Estimated Number Of GSTN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>