foundation-objs/main/default/objects/Opportunity/fields/Estimated_Number_of_PAN__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Number_of_PAN__c</fullName>
    <label>Estimated Number of PAN</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>