foundation-objs/main/default/objects/Opportunity/fields/Estimated_Number_of_Purchase_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Number_of_Purchase_Invoice__c</fullName>
    <label>Estimated Number of Purchase Invoice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>