foundation-objs/main/default/objects/Opportunity/fields/Estimated_Number_of_Sales_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Number_of_Sales_Invoices__c</fullName>
    <label>Estimated Number of  Sales Invoices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>