foundation-objs/main/default/objects/Opportunity/fields/Evaluation_parameters_of_company_remarks__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_parameters_of_company_remarks__c</fullName>
    <defaultValue>&quot;NA&quot;</defaultValue>
    <label>Deal evaluation parameters - remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>