foundation-objs/main/default/objects/Opportunity/fields/Evaluation_parameters_of_the_company__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_parameters_of_the_company__c</fullName>
    <label>Deal evaluation parameters of the client</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Seamless ERP integration</fullName>
            </value>
            <value>
                <fullName>Time to integrate</fullName>
            </value>
            <value>
                <fullName>Time to implement</fullName>
            </value>
            <value>
                <fullName>Product superiority</fullName>
            </value>
            <value>
                <fullName>POC results</fullName>
            </value>
            <value>
                <fullName>Existing customer</fullName>
            </value>
            <value>
                <fullName>None - Add in below text field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>