foundation-objs/main/default/objects/Opportunity/fields/Expected_Number_of_eway_bill__c.field-meta.xml
<CustomField>
    <fullName>Expected_Number_of_eway_bill__c</fullName>
    <label>Estimated Number of eway bill</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>