foundation-objs/main/default/objects/Opportunity/fields/Experience_Impact__c.field-meta.xml
<CustomField>
    <fullName>Experience_Impact__c</fullName>
    <label>Experience Impact</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>