foundation-objs/main/default/objects/Opportunity/fields/Extension_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Extension_Approval_Status__c</fullName>
    <label>Extension Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>