foundation-objs/main/default/objects/Opportunity/fields/Extension_Days__c.field-meta.xml
<CustomField>
    <fullName>Extension_Days__c</fullName>
    <label>Extension Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>