foundation-objs/main/default/objects/Opportunity/fields/Extension_Submiter_Count__c.field-meta.xml
<CustomField>
    <fullName>Extension_Submiter_Count__c</fullName>
    <label>Extension Submiter Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>