foundation-objs/main/default/objects/Opportunity/fields/Fee_per_additional_usage__c.field-meta.xml
<CustomField>
    <fullName>Fee_per_additional_usage__c</fullName>
    <label>Fee per additional usage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>