foundation-objs/main/default/objects/Opportunity/fields/Finance_Approval_Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Rejection_Date__c</fullName>
    <label>Finance Approval / Rejection Date</label>
    <type>Date</type>
</CustomField>