foundation-objs/main/default/objects/Opportunity/fields/Finance_approval_status__c.field-meta.xml
<CustomField>
    <fullName>Finance_approval_status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance Approval In Progress</fullName>
            </value>
            <value>
                <fullName>Finance Approval Approved</fullName>
            </value>
            <value>
                <fullName>Finance Approval Rejected</fullName>
            </value>
            <value>
                <fullName>Legal Approval In Progress</fullName>
            </value>
            <value>
                <fullName>Legal Approval Approved</fullName>
            </value>
            <value>
                <fullName>Legal Approval Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>