foundation-objs/main/default/objects/Opportunity/fields/Finance_Head_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Finance_Head_Contact_Number__c</fullName>
    <label>Finance Head Contact Number</label>
    <type>Phone</type>
</CustomField>