foundation-objs/main/default/objects/Opportunity/fields/Finance_Head_Designation__c.field-meta.xml
<CustomField>
    <fullName>Finance_Head_Designation__c</fullName>
    <label>Finance Head Designation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>