foundation-objs/main/default/objects/Opportunity/fields/Finance_Head_Email__c.field-meta.xml
<CustomField>
    <fullName>Finance_Head_Email__c</fullName>
    <label>Finance Head Email</label>
    <type>Email</type>
</CustomField>