foundation-objs/main/default/objects/Opportunity/fields/Finance_Head_Email_N__c.field-meta.xml
<CustomField>
    <fullName>Finance_Head_Email_N__c</fullName>
    <formula>Finance_Head_contact__r.Email</formula>
    <label>Finance Head_Email(N)</label>
    <type>Text</type>
</CustomField>