foundation-objs/main/default/objects/Opportunity/fields/Finance_Head_Name__c.field-meta.xml
<CustomField>
    <fullName>Finance_Head_Name__c</fullName>
    <label>Finance Head Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>