foundation-objs/main/default/objects/Opportunity/fields/Finance_POC_contact__c.field-meta.xml
<CustomField>
    <fullName>Finance_POC_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance POC for invoice processing</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>No contacts on the related account.</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Designation_Oppor__c</field>
            <operation>equals</operation>
            <value>Finance/Invoice Processing</value>
        </filterItems>
        <filterItems>
            <field>Contact.Is_Communicable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (FinancePOC)</relationshipLabel>
    <relationshipName>OpportunitiesFinancePOC</relationshipName>
    <type>Lookup</type>
</CustomField>