foundation-objs/main/default/objects/Opportunity/fields/Finance_POC_for_invoice_p_Email_N__c.field-meta.xml
<CustomField>
    <fullName>Finance_POC_for_invoice_p_Email_N__c</fullName>
    <formula>Finance_POC_contact__r.Email</formula>
    <label>Finance POC for invoice p_Email(N)</label>
    <type>Text</type>
</CustomField>