foundation-objs/main/default/objects/Opportunity/fields/Finance_POC_For_Invoice_Processing_Desig__c.field-meta.xml
<CustomField>
    <fullName>Finance_POC_For_Invoice_Processing_Desig__c</fullName>
    <label>Finance POC For Invoice Processing Desig</label>
    <length>100</length>
    <type>Text</type>
</CustomField>