foundation-objs/main/default/objects/Opportunity/fields/Finance_POC_For_Invoice_Processing_Email__c.field-meta.xml
<CustomField>
    <fullName>Finance_POC_For_Invoice_Processing_Email__c</fullName>
    <label>Finance POC For Invoice Processing Email</label>
    <type>Email</type>
</CustomField>