foundation-objs/main/default/objects/Opportunity/fields/Finance_POC_For_Invoice_Processing_Name__c.field-meta.xml
<CustomField>
    <fullName>Finance_POC_For_Invoice_Processing_Name__c</fullName>
    <label>Finance POC For Invoice Processing Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>