foundation-objs/main/default/objects/Opportunity/fields/Finance_POC_For_Invoice_Processing_Phone__c.field-meta.xml
<CustomField>
    <fullName>Finance_POC_For_Invoice_Processing_Phone__c</fullName>
    <label>Finance POC For Invoice Processing Phone</label>
    <type>Phone</type>
</CustomField>