foundation-objs/main/default/objects/Opportunity/fields/First_Pipeline_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Pipeline_Date__c</fullName>
    <label>First Pipeline Date</label>
    <type>Date</type>
</CustomField>