foundation-objs/main/default/objects/Opportunity/fields/Focus_Opportunity_Field_Sales__c.field-meta.xml
<CustomField>
    <fullName>Focus_Opportunity_Field_Sales__c</fullName>
    <label>Focus Opportunity - Field Sales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>