foundation-objs/main/default/objects/Opportunity/fields/Follow_Up_Date_lost__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date_lost__c</fullName>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>