foundation-objs/main/default/objects/Opportunity/fields/Funnel_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Expiry_Date__c</fullName>
    <description>This was created to track the funnel.and opportunity Expiry</description>
    <formula>Last_Opportunity_Stage_Update_Date__c +60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funnel Expiry Date (C)</label>
    <type>Date</type>
</CustomField>