foundation-objs/main/default/objects/Opportunity/fields/Generating_IRN_E_Inv__c.field-meta.xml
<CustomField>
    <fullName>Generating_IRN_E_Inv__c</fullName>
    <label>Generating IRN (E-Inv)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Generating_IRN_E_Inv</valueSetName>
    </valueSet>
</CustomField>