foundation-objs/main/default/objects/Opportunity/fields/Global_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Global_Approval_Status__c</fullName>
    <label>Global Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>