foundation-objs/main/default/objects/Opportunity/fields/GST_Advantage_Count__c.field-meta.xml
<CustomField>
    <fullName>GST_Advantage_Count__c</fullName>
    <description>Count of GST Advantage W/WO CSM</description>
    <label>GST Advantage Count</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Code__c</field>
        <operation>contains</operation>
        <value>GST-ADVANTAGE</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Billing_Type__c</field>
        <operation>equals</operation>
        <value>ARR</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>