foundation-objs/main/default/objects/Opportunity/fields/GSTIN_Bucket__c.field-meta.xml
<CustomField>
    <fullName>GSTIN_Bucket__c</fullName>
    <label>GSTIN Bucket</label>
    <length>50</length>
    <type>Text</type>
</CustomField>