foundation-objs/main/default/objects/Opportunity/fields/GSTINs__c.field-meta.xml
<CustomField>
    <fullName>GSTINs__c</fullName>
    <label>GSTINs</label>
    <length>100</length>
    <type>Text</type>
</CustomField>