foundation-objs/main/default/objects/Opportunity/fields/How_do_we_win_against_competition__c.field-meta.xml
<CustomField>
    <fullName>How_do_we_win_against_competition__c</fullName>
    <label>How do we win against competition</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>