foundation-objs/main/default/objects/Opportunity/fields/How_do_we_win_against_competition_others__c.field-meta.xml
<CustomField>
    <fullName>How_do_we_win_against_competition_others__c</fullName>
    <label>How_do_we_win_against_competition_others</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>